<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.example.john.simulatesms.fragment.ConversationFragment">

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></ListView>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="77dp">
        <!--选择菜单-->
        <LinearLayout
            android:id="@+id/ll_conversation_selection_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="5dp"
                >

                <Button
                    android:id="@+id/ll_conversation_btn_edit"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn_bg"
                    android:text="@string/btn_edit"/>

                <Button
                    android:id="@+id/ll_conversation_btn_new_sms"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn_bg"
                    android:text="@string/btn_new_sms"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_conversation_operation_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:translationY="77dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="5dp"
                >

                <Button
                    android:id="@+id/ll_conversation_btn_select_all"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn_bg"
                    android:text="@string/btn_select_all_text"/>

                <Button
                    android:id="@+id/ll_conversation_btn_select_cancel"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn_bg"
                    android:text="@string/btn_select_cancel_text"/>

                <Button
                    android:id="@+id/ll_conversation_btn_delete"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn_bg"
                    android:text="@string/btn_delete_text"/>

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
