<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        >

        <!--会话-->
        <LinearLayout
            android:id="@+id/ll_conversation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_message_white_24dp"/>

            <TextView
                android:id="@+id/tv_conversation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_text"
                android:textColor="@color/colorOrange"/>

        </LinearLayout>


        <!--分组-->
        <LinearLayout
            android:id="@+id/ll_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_group_white_24dp"/>

            <TextView
                android:id="@+id/tv_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_text"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_search_white_24dp"/>

            <TextView
                android:id="@+id/tv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_text"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

    </LinearLayout>


    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorRed"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_page"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></android.support.v4.view.ViewPager>
</LinearLayout>
